# cdelta

./: .gitignore  .mcp.json  CLAUDE.md  ROOT
.build-tmp/isabelle/process11972036243720315745/: poly-stats-573514
.build-tmp/isabelle/process17480391987538660910/: poly-stats-627999
.codex/: config.toml
decoder/: ROOT  harness.c  vcdiff_dec.c
encoder/: ROOT  VcdiffEnc.thy  harness.c  vcdiff_enc.c
harness/: Cargo.toml  build.rs
harness/benches/: case01.rs
harness/src/: lib.rs
harness/tests/: roundtrip.rs
planning/: decoder-refinement-continuation-plan.md  encoder-correctness-parallel.md  encoder-correctness.md  encoder-refinement-strategy.md  flush-pending-loop-spec.md  proof-strategy.md  refine-progress-analysis.md  refine-progress.md  setup.md  spec-progress.md  step1-progress.md  vcdiff_decode_lifted.txt
proof/decoder-refine/: VcdiffDec_Refine.thy
proof/encoder-correctness/: VcdiffEnc_Cache_Opcode.thy  VcdiffEnc_Correct.thy  VcdiffEnc_Emit.thy  VcdiffEnc_Match.thy  VcdiffEnc_Serialize.thy  VcdiffEnc_Window.thy  VcdiffEnc_Wire.thy  VcdiffEnc_Writers.thy
proof/roundtrip/: Spec_Roundtrip.thy
refine/: ROOT  VcdiffDec_Refine.thy
spec/: AddressCache.thy  Bytes.thy  CodeTable.thy  Decoder_Spec.thy  Encoder_Spec.thy  Instructions.thy  ROOT  Spec_Roundtrip.thy  Varint.thy
spec/cdec/: VcdiffDec.thy  vcdiff_dec.c
spec/cenc/: VcdiffEnc.thy  harness.c  vcdiff_enc.c
spec/pure/: Decoder_Spec.thy  Encoder_Spec.thy  Varint.thy
spec/roundtrip/: ROOT  Spec_Roundtrip.thy
test_add/: Add.thy  ROOT  add.c
(+2 files in other folders)
